tests/NormalTests/paczka1/small_fuzzy/80966923.err
Error in line 1: S466 S466 74,9
Error in line 3: 1nQ2ZjTUNb S466 16,2
Error in line 10: 0WPJoCC S466 27,1
Error in line 11: 0WPJoCC S610 82,0
